src/interpreter/snapshots/rlox__interpreter__tests__interpreter@logical_operator__and.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/logical_operator/and.lox
---
false
1
false
true
3
true
false
