src/interpreter/snapshots/rlox__interpreter__tests__interpreter@logical_operator__and_truth.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/logical_operator/and_truth.lox
---
false
nil
ok
ok
ok
