src/interpreter/snapshots/rlox__interpreter__tests__interpreter@logical_operator__or.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/logical_operator/or.lox
---
1
1
true
false
false
false
true
