src/interpreter/snapshots/rlox__interpreter__tests__interpreter@logical_operator__or_truth.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/logical_operator/or_truth.lox
---
ok
ok
true
0
s
